@@ -4,6 +4,7 @@ Knot Resolver 3.x.y (201y-mm-dd)
 New features
 ------------
 - module edns_keepalive to implement server side of RFC 7828 (#408)
+- module nsid to implement server side of RFC 5001 (#289)
 
 Module API changes
 ------------------
